<resources>
    <!--Fragment Home-->
    <string name="app_name">Unscramble</string>
    <string name="start_button">START</string>
    <string name="score_tag">SCORE</string>
    <string name="best_score_tag">BEST SCORE</string>
    <string name="score">%d</string>
    <string name="best_score">%d</string>
    <!--Fragment Game-->
    <string name="count">%d out of %d Words</string>
    <string name="unscrambled_word">Unscramble</string>
    <string name="instruction">unscramble the word using all the letters</string>
    <string name="game_score">Score : %d</string>
    <string name="skip">SKIP</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_word">Enter Your Word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You Scored : %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
</resources>