<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/word_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/count"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/game_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/game_score"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/word_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/word_counter"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/unscrambled_word_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/unscrambled_word"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/word_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_word"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#A1887F"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/instruction"
        app:layout_constraintStart_toStartOf="@+id/instruction"
        app:layout_constraintTop_toBottomOf="@+id/instruction" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/skip"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/word_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/word_input"
        app:layout_constraintTop_toBottomOf="@+id/word_input" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/skip_button"
        app:layout_constraintStart_toEndOf="@+id/skip_button"
        app:layout_constraintTop_toTopOf="@+id/skip_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/instruction"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/unscrambled_word_text"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/unscrambled_word_text"
        app:layout_constraintTop_toBottomOf="@+id/unscrambled_word_text" />
</androidx.constraintlayout.widget.ConstraintLayout>